syntax = "proto3";

package reservation;

option java_multiple_files = true;
option java_package = "com.devoops.reservation.grpc.proto";

service ReservationInternalService {
  rpc CheckReservationsExist(CheckReservationsExistRequest) returns (CheckReservationsExistResponse);
}

message CheckReservationsExistRequest {
  string accommodation_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message CheckReservationsExistResponse {
  bool has_reservations = 1;
}
